package com.tetras.library;

import com.tetras.application.MachineACafe;

public class GestionMachineACafe {

    private MachineACafe machine;

    public MachineACafe getMachine() {
        return machine;
    }

    public void setMachine(MachineACafe machine) {
        this.machine = machine;
    }
}