@startuml Singleton

skinparam class {
    BackgroundColor<<librarie>> #9bca9d
    BackgroundColor<<application>> #0bca9d
}

package "com.tetras.library" #9bca0d {
    class GestionMachineACafe <<librarie>> {
        - machine: MachineACafe
    }
}


package "com.tetras.application" #0bca0d {
    class MachineACafe <<application>> 
    class Application <<application>> {
        - gestionnaire: GestionMachineACafe
    }
}

Application o-- GestionMachineACafe
GestionMachineACafe o-- MachineACafe

@enduml